--- a/README
+++ b/README
@@ -16,16 +16,9 @@ A sandbox is fine too!
 
 PREREQUISITES
 
-Outline::Lua should compile against Lua 5.0 and above. If it does not,
-please file a bug (see below).
-
-Note that under Ubuntu and possibly other distros, simply installing the
-Lua dev packages will not work. No, I don't know why.
-
-I recommend always building Lua from source. It is really easy. Even I managed it.
-
-Lua can be found at http://www.lua.org/download.html
-
+Outline::Lua has been written against Lua 5.1, the current. If it does not,
+please do check that your Makefile.PL is pointing to the right libs. They are
+currently correct for Ubuntu 10.04, if you install liblua5.1-0-dev.
 
 INSTALLATION
 
@@ -36,18 +29,25 @@ To install this module, run the following commands:
 	make test
 	make install
 
+This will install the version you checked out. If you prefer, you can install it
+from cpan:
+
+    cpan Outline::Lua
+
+but this method will not give you the bleeding-edge version.
 
 SUPPORT AND DOCUMENTATION
 
-After installing, you can find documentation for this module with the
-perldoc command.
+The best place to get the docs is from the module itself:
 
     perldoc Outline::Lua
 
-You can also look for information at:
+If you think you've found a bug, please post it to the github issues page, of
+course after checking that it is not already there.
 
-    RT, CPAN's request tracker
-        http://rt.cpan.org/NoAuth/Bugs.html?Dist=Outline-Lua
+    http://github.com/Altreus/outline-lua/issues
+
+You can also look for information at:
 
     AnnoCPAN, Annotated CPAN documentation
         http://annocpan.org/dist/Outline-Lua
@@ -55,14 +55,13 @@ You can also look for information at:
     CPAN Ratings
         http://cpanratings.perl.org/d/Outline-Lua
 
-    Search CPAN
-        http://search.cpan.org/dist/Outline-Lua
-
 
 COPYRIGHT AND LICENCE
 
 Copyright (C) 2009 Alastair Douglas
 
 This program is free software; you can redistribute it and/or modify it
-under the same terms as Perl itself.
+under the X11/MIT license.
+
+http://www.opensource.org/licenses/mit-license.php
 
